overview and few other change

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  font-family: "Poppins", "sana-serif";
-} */
+:root {
+  --pr-text-clr: #4195f1;
+  --pr-bg-clr: #4195f1;
+  --sec-bg-clr: #f5f5f5;
+  --user-bg-clr: #f2f3ee;
+  --user-avatar: #00b9cb;
+  --hover-clr: #00b9cb;
+}
 
 @layer components {
   .line-with-text {
@@ -23,11 +28,41 @@
 }
 
 @layer utilities {
-  .text-clr {
-    color: #4195f1;
+  .pr-text-clr {
+    color: var(--pr-text-clr);
   }
-  .bg-clr {
-    background-color: #4195f1;
+  .pr-bg-clr {
+    background-color: var(--pr-bg-clr);
+  }
+  .sec-bg-clr {
+    background: var(--sec-bg-clr);
+  }
+
+  .user-bg-clr {
+    background-color: var(--user-bg-clr);
+  }
+
+  .user-email-clr {
+    color: rgba(0, 0, 0, 0.5);
+  }
+  .user-avatar {
+    background-color: #00b9cb;
+  }
+
+  .overflow-banner {
+    background-color: #c4ddfc;
+  }
+
+  .hover-clr {
+    color: var(--hover-clr);
+  }
+
+  .grey-text {
+    color: rgba(0, 0, 0, 0.4);
+  }
+
+  .overview-expense-bg{
+    background-color: #F7F7F7;;
   }
 
   .image-wrapper {
@@ -59,5 +94,4 @@
     z-index: 2;
     padding: 20px;
   }
-
 }
