--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,14 @@
     background-color: #f7f7f7;
   }
 
+  .icon{
+    fill: red;
+  }
+
+  .border-clr{
+    border: 1px solid #4195f1;
+  }
+
 
   .image-wrapper {
     position: relative;
