--- a/src/components/stepperForms/forms.css
+++ b/src/components/stepperForms/forms.css
@@ -1,49 +1,71 @@
 .select-container {
-    position: relative;
-    width: 100%;
-    font-family: Arial, sans-serif;
-    cursor: pointer;
-    
-  }
-  
-  .select-display {
-    padding: 10px;
-    font-size: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.20);
-    border-radius: 8px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 12px;
-    font-family: "poppins";
+  position: relative;
+  width: 100%;
+  font-family: Arial, sans-serif;
+  cursor: pointer;
+}
 
-  }
-  
-  .custom-arrow {
-    font-size: 0.9rem;
-    color: #555;
-  }
-  
-  .dropdown-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-    font-size: 12px;
-    font-family: "poppins";
-  }
-  
-  .dropdown-menu div {
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  .dropdown-menu div:hover {
-    background-color: #f0f0f0;
-  }
-  
+.select-display {
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  font-family: "poppins";
+}
+
+.custom-arrow {
+  font-size: 0.9rem;
+  color: #555;
+  position: absolute;
+  right: 20px;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  font-size: 12px;
+  font-family: "poppins";
+}
+
+.dropdown-menu div {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.dropdown-menu div:hover {
+  background-color: #f0f0f0;
+}
+
+
+input[type="date"]:before {
+  content: attr(placeholder) !important;
+  color: #aaa;
+  margin-right: 0.5em;
+}
+
+input[type="date"]:focus:before,
+input[type="date"]:valid:before {
+  content: "";
+}
+
+input[type="date"]:focus + ,
+input[type="date"]:valid +  {
+  content: "";
+}
+
+input[type="date"] {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
