--- a/src/components/stepperForms/forms.css
+++ b/src/components/stepperForms/forms.css
@@ -47,25 +47,7 @@
   background-color: #f0f0f0;
 }
 
-
-input[type="date"]:before {
-  content: attr(placeholder) !important;
-  color: #aaa;
-  margin-right: 0.5em;
-}
-
-input[type="date"]:focus:before,
-input[type="date"]:valid:before {
-  content: "";
-}
-
-input[type="date"]:focus + ,
-input[type="date"]:valid +  {
-  content: "";
-}
-
-input[type="date"] {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+input[type="date"]::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+  opacity: 1;
 }
