Selection and switch updated

--- a/src/components/stepperForms/forms.css
+++ b/src/components/stepperForms/forms.css
@@ -47,7 +47,8 @@
   background-color: #f0f0f0;
 }
 
-input[type="date"]::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-  opacity: 1;
+
+.placeholder-clr {
+  color: rgba(0, 0, 0, 0.2);
 }
+
