--- a/src/components/stepperForms/forms.css
+++ b/src/components/stepperForms/forms.css
@@ -75,3 +75,9 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   -moz-appearance: textfield;
 }
+
+.option-bg:hover,
+.option-bg:focus {
+  background-color: rgba(129, 125, 125, 0.1);
+}
+
