--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,8 @@
   }
 
   .overview-expense-bg {
-    background-color: #f7f7f7;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
   }
 
   .overview-text {
